// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nested can work 1`] = `
Object {
  "components": Object {
    "schemas": Object {
      "nested_message.ABitOfEverything": Object {
        "description": "Intentionally complicated message type to cover many features of Protobuf.",
        "properties": Object {
          "bool_value": Object {
            "default": null,
            "format": "",
            "type": "boolean",
          },
          "bytes_value": Object {
            "default": null,
            "format": "",
            "type": "string",
          },
          "double_value": Object {
            "default": null,
            "format": "",
            "type": "string",
          },
          "fixed32_value": Object {
            "default": null,
            "format": "",
            "type": "number",
          },
          "fixed64_value": Object {
            "default": null,
            "format": "",
            "type": "string",
          },
          "float_value": Object {
            "default": null,
            "format": "",
            "type": "number",
          },
          "int32_value": Object {
            "default": null,
            "format": "",
            "type": "number",
          },
          "int64_value": Object {
            "default": null,
            "format": "",
            "type": "string",
          },
          "nested": Object {
            "items": Object {
              "$ref": "#/components/schemas/nested_message.ABitOfEverything.Nested",
            },
            "type": "array",
          },
          "nested_path_enum_value": Object {
            "$ref": "#/components/schemas/nested_message.ABitOfEverything.Nested.DeepEnum",
          },
          "repeated_string_value": Object {
            "items": Object {
              "default": null,
              "format": "",
              "type": "string",
            },
            "type": "array",
          },
          "sfixed32_value": Object {
            "default": null,
            "format": "",
            "type": "number",
          },
          "sfixed64_value": Object {
            "default": null,
            "format": "",
            "type": "string",
          },
          "single_nested": Object {
            "$ref": "#/components/schemas/nested_message.ABitOfEverything.Nested",
          },
          "sint32_value": Object {
            "default": null,
            "format": "",
            "type": "number",
          },
          "sint64_value": Object {
            "default": null,
            "format": "",
            "type": "string",
          },
          "string_value": Object {
            "default": null,
            "format": "",
            "type": "string",
          },
          "uint32_value": Object {
            "default": null,
            "format": "",
            "type": "number",
          },
          "uint64_value": Object {
            "default": null,
            "format": "",
            "type": "string",
          },
          "uuid": Object {
            "default": null,
            "format": "",
            "type": "string",
          },
        },
        "required": Array [],
        "type": "object",
      },
      "nested_message.ABitOfEverything.Nested": Object {
        "description": "Nested is nested type.",
        "properties": Object {
          "amount": Object {
            "default": null,
            "format": "",
            "type": "number",
          },
          "name": Object {
            "default": null,
            "format": "",
            "type": "string",
          },
          "ok": Object {
            "$ref": "#/components/schemas/nested_message.ABitOfEverything.Nested.DeepEnum",
          },
        },
        "required": Array [],
        "type": "object",
      },
      "nested_message.ABitOfEverything.Nested.DeepEnum": Object {
        "description": "0 - FALSE // FALSE is false.
1 - TRUE // TRUE is true.",
        "enum": Array [
          0,
          1,
        ],
        "type": "number",
      },
    },
  },
  "info": Object {
    "description": "",
    "title": "nested",
    "version": "1",
  },
  "openapi": "3.0.0",
  "paths": Object {},
}
`;

exports[`nested swagger v2 1`] = `
Object {
  "definitions": Object {
    "nested_message.ABitOfEverything": Object {
      "description": "Intentionally complicated message type to cover many features of Protobuf.",
      "properties": Object {
        "bool_value": Object {
          "default": null,
          "format": "",
          "type": "boolean",
        },
        "bytes_value": Object {
          "default": null,
          "format": "",
          "type": "string",
        },
        "double_value": Object {
          "default": null,
          "format": "",
          "type": "string",
        },
        "fixed32_value": Object {
          "default": null,
          "format": "",
          "type": "number",
        },
        "fixed64_value": Object {
          "default": null,
          "format": "",
          "type": "string",
        },
        "float_value": Object {
          "default": null,
          "format": "",
          "type": "number",
        },
        "int32_value": Object {
          "default": null,
          "format": "",
          "type": "number",
        },
        "int64_value": Object {
          "default": null,
          "format": "",
          "type": "string",
        },
        "nested": Object {
          "description": null,
          "items": Object {
            "$ref": "#/definitions/nested_message.ABitOfEverything.Nested",
          },
          "type": "array",
        },
        "nested_path_enum_value": Object {
          "$ref": "#/definitions/nested_message.ABitOfEverything.Nested.DeepEnum",
        },
        "repeated_string_value": Object {
          "description": null,
          "items": Object {
            "default": null,
            "format": "",
            "type": "string",
          },
          "type": "array",
        },
        "sfixed32_value": Object {
          "default": null,
          "format": "",
          "type": "number",
        },
        "sfixed64_value": Object {
          "default": null,
          "format": "",
          "type": "string",
        },
        "single_nested": Object {
          "$ref": "#/definitions/nested_message.ABitOfEverything.Nested",
        },
        "sint32_value": Object {
          "default": null,
          "format": "",
          "type": "number",
        },
        "sint64_value": Object {
          "default": null,
          "format": "",
          "type": "string",
        },
        "string_value": Object {
          "default": null,
          "format": "",
          "type": "string",
        },
        "uint32_value": Object {
          "default": null,
          "format": "",
          "type": "number",
        },
        "uint64_value": Object {
          "default": null,
          "format": "",
          "type": "string",
        },
        "uuid": Object {
          "default": null,
          "format": "",
          "type": "string",
        },
      },
      "required": Array [],
      "type": "object",
    },
    "nested_message.ABitOfEverything.Nested": Object {
      "description": "Nested is nested type.",
      "properties": Object {
        "amount": Object {
          "default": null,
          "format": "",
          "type": "number",
        },
        "name": Object {
          "default": null,
          "format": "",
          "type": "string",
        },
        "ok": Object {
          "$ref": "#/definitions/nested_message.ABitOfEverything.Nested.DeepEnum",
        },
      },
      "required": Array [],
      "type": "object",
    },
    "nested_message.ABitOfEverything.Nested.DeepEnum": Object {
      "description": "0 - FALSE // FALSE is false.
1 - TRUE // TRUE is true.",
      "enum": Array [
        0,
        1,
      ],
      "type": "number",
    },
  },
  "info": Object {
    "description": "",
    "title": "nested",
    "version": "1",
  },
  "paths": Object {},
  "swagger": "2.0",
}
`;
